update om naar een website te gaan

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_NAME=supermariomon
-DB_USER=superadmin
-DB_PASS=Supermariomon1
-DB_HOST=localhost
-PORT=3000
+DB_USER=ambra
+DB_PASS=W8woord
+DB_HOST=192.168.120.12
+PORT=3306
